<resources>
    <string name="app_name">Vacina em Dia</string>

    <string name="tela_inicial">Tela Inicial</string>
    <string name="tela_Adicionar_Vacina">Preencha os campos abaixo com as informações da vacina</string>
    <string name="add_vacina">Botão para Adicionar uma Vacina</string>

    <string name="nome_vacina">Nome da Vacina:</string>
    <string name="status_vacina">Você já tomou está vacina?</string>
    <string name="doses_recebidas">Quantas doses desta Vacina você já tomou?</string>
    <string name="data_doses_recebidas">Quando você recebeu a última doses desta Vacina?</string>
    <string name="data_exemplo">Exemplo: 21/01/2015</string>

    <!-- Activity Detalhe Vacina -->
    <string name="informacoes">Informações sobre avacina:</string>
    <string name="idede">Quando devo toma-la?</string>
    <string name="detalhes">Detalhes sobre a Vacina!!!!</string>
    <string name="statusVacinaPendente">Vacina Pendente</string>
    <string name="statusData">Vacinado em</string>
    <string name="statusDoses">Doses da Vacina Recebidas:</string>
    <string name="quantidade_dose">Doses Recebidas</string>
    <string name="informacoes_vacina">Informações</string>

    <string name="botao_salvar">Salvar</string>
    <string name="botao_editar">Atualizar Informações</string>
    <string name="botao_excluir">Excluir Vacina</string>

    <string name="vacinado">1</string>
    <string name="vacina_pendente">0</string>

    <string name="aviso_campo_obrigatorio">"Preencha o campo do nome da vacina"</string>
    <string name="aviso_erro_acesso_bd">"Erro ao acessar o Banco de Dados"</string>
    <string name="aviso_erro_cadastro_bd">"Erro ao cadastar a vacina"</string>
    <string name="aviso_erro_atualizacao_bd">"Erro ao Atualizar os dados da vacina"</string>
    <string name="aviso_erro_excluir_bd">"Erro ao excluir o Banco de Dados"</string>
    <string name="aviso_dados_salvos">"Os dados da vacina foram salvos com sucesso"</string>



</resources>